test/files/neg/nopredefs.scala
import Predef.{Set => _, _}

object Test {
  val x = Map(1 -> 2)
  val y = Set(3)
}
